<resources>
    <string name="app_name">Scheduler</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">現在の予定を表示するウィジェットです。</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="no_schedule">現在の予定はありません。</string>
    <string name="no_next_schedule">☆☆☆本日は終了しました☆☆☆</string>
    <string name="title_activity_time_range_settings">時間割設定</string>
    <string name="add">追加</string>
    <string name="_00_00">00:00</string>
    <string name="time_range_settings_starttime_in">開始時刻を選択</string>
    <string name="time_range_settings_endtime_in">終了時刻を選択</string>
    <string name="insert_success">追加しました!</string>
    <string name="settings_conflict">競合する値が存在します!</string>
    <string name="invalid_input">入力値が正しくありません!</string>
    <!-- time_range_settings_category_addとaddは少し意味が異なるので棲み分け -->
    <string name="time_range_settings_category_add">追加</string>
    <string name="time_range_settings_category_remove">削除</string>
    <string name="header_time_range">時間割</string>
    <string name="header_delete">削除</string>
    <string name="empty_input">入力値が空です</string>
    <string name="time_range_placeholder"><![CDATA[00:00->00:00]]></string>
    <string name="start_time_later_than_end">開始時刻が終了時刻より後です</string>
    <string name="cancel">キャンセル</string>
    <string name="ok">OK</string>
    <string name="title_activity_schedule_settings">予定設定</string>
    <string name="invalid_time_range">不明な時間割です!\n時間割は一つ以上入っていますか?</string>
    <string name="schedule_textfield_placeholder">ここに予定を入力</string>
    <string name="schedule_settings_dontreset">追加時に情報をリセットしない</string>
    <string name="weekday_sunday">日曜日</string>
    <string name="weekday_monday">月曜日</string>
    <string name="weekday_tuesday">火曜日</string>
    <string name="weekday_wednesday">水曜日</string>
    <string name="weekday_thursday">木曜日</string>
    <string name="weekday_friday">金曜日</string>
    <string name="weekday_saturday">土曜日</string>
    <string name="weekday_error">エラー</string>
    <string name="weekday">曜日</string>
    <string name="timerange">時間割</string>
    <string name="schedule_item_format">%1$s %2$s: %3$s</string>
    <string name="schedule_edit">編集</string>
    <string name="schedule_save">保存</string>
    <string name="schedule_edit_success">更新しました!</string>
    <string name="schedule_edit_failure">更新に失敗しました!</string>
    <string name="schedule_edit_weekday_format">曜日: %1$s</string>
    <string name="schedule_edit_timerange_format">時間割: %1$s</string>
</resources>
